@@ -22,7 +22,7 @@
 # FIX:
 from .close      import CloseAgent
 from .edit       import EditAgent
-# from .format     import FormatAgent
+from .format     import FormatAgent
 from .help       import HelpAgent
 # from .menu       import MenuAgent
 from .open       import OpenAgent
